--- a/style.css
+++ b/style.css
@@ -1,7 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Sniglet:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Copse&display=swap');
 
-.sniglet-regular {
-    font-family: "Sniglet", serif;
+.copse-regular {
+    font-family: "Copse", serif;
     font-weight: 400;
     font-style: normal;
-  }
+    } 
+.header{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+    .display-flex{
+    display: flex;
+    }
+
+    .navbar{
+justify-content: space-between;
+align-items: center;
+    }
+
+    .nav{
+
+    }
+
+    .nav-item{
+        list-style: none;
+        margin-right: 30px;
+    }
+
+    .nav-link{
+        text-decoration: none;
+        font-weight: 500;
+    }
+    .navbar, .banner{
+        max-width: 1400px;
+        margin: 0 auto;
+    }
+    .brand{
+        font-weight: 700;
+        font-size: 2rem;
+    }
+    .banner-content{
+        max-width: 850px;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .baner-title{
+        font-weight: 700;
+        font-size: 4rem;
+    }
+    .btn-prim{
+        background-color: #FF900E;
+        color:white;
+        padding: 20px 25px;
+        font-size: 1.25rem;
+        font-weight: 600;
+        border-radius:8px ;
+        border: none;
+    }
+    .baner-img{
+        width: 100%;
+    }
+    @media screen and (max-width: 576px){
+        .navbar, .nav{
+            flex-direction: column;
+        }
+    }
