--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Copse&display=swap');
 
+body{
+    margin: 0;
+    padding: 0;
+}
 .copse-regular {
     font-family: "Copse", serif;
     font-weight: 400;
@@ -17,8 +21,8 @@ justify-content: space-between;
 align-items: center;
     }
 
-    .nav{
-
+    .baner-descrption{
+color: rgb(114, 114, 114);
     }
 
     .nav-item{
@@ -60,8 +64,65 @@ align-items: center;
     .baner-img{
         width: 100%;
     }
+    main{
+        max-width:  1400 px;
+margin: 0 auto;
+    }
+     .teams{
+       align-items: center; 
+     }
+     .team-img-cont{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 24px;
+     }
+
+     main>section{
+        margin-top: 130px;
+     }
+    .features{
+        margin-left: 80px;
+        max-width: 530px;
+    }
+.a{
+    color: rgb(114, 114, 114);
+  
+}
+.feture-title{
+font-size: 2.8rem;
+font-weight: 700;
+}
+
+#aa{
+    font-weight: 500;
+}
+.c{
+    color: rgb(255, 144, 14);
+}
+.feture-descrptn{
+color: rgb(114, 114, 114);
+}
+
+
+
     @media screen and (max-width: 576px){
-        .navbar, .nav{
+        .navbar, .nav, .teams{
             flex-direction: column;
+        }
+.team-img-cont{
+   grid-template-columns: repeat(1,1fr); 
+}
+.features{
+    margin-left: 20px ;
+}
+    }
+
+
+    @media screen and (min-width: 576px) and (max-width: 992px) {
+        .teams{
+            flex-direction: column;
+        }
+        .features{
+            margin-left: 50px auto;
         }
     }
